# sdf-nmpc

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html  style.css
scripts/: build_solver.py  find_amax.py  find_rtilde.py
scripts/neural_nets/: _paths.py  create_h5.py  df_test.py  df_train.py  df_viz_3D.py  df_viz_img.py  vae_test.py  vae_train.py
sdf_nmpc/: __init__.py  controller.py  gen_model.py  ocp.py  ref_gen.py  vae.py
sdf_nmpc/config/: default.yaml
sdf_nmpc/data/: sdf_90_25664.pt  sdf_lidar_25664.pt  vae.pt  vae_lidar.pt
sdf_nmpc/model/: base_model.py  cost_const_helpers.py  quad_acc.py  quad_props.py  quad_rates.py  quad_rollpitchyawrate.py  quad_rollpitchyawrate_tau.py  quad_wrench.py
sdf_nmpc/network/: mlp.py  neural_df.py  resnet.py  vae.py
sdf_nmpc/utils/: activation.py  collision_checker.py  config.py  data.py  df_computer.py  embeddings.py  layer_init.py  losses.py  math.py  normalizer.py  pos_sampler.py  preprocessing.py  reference.py  stability.py  visualization.py
